# repopilot-agent-code-maintenance

./: .env.example  .gitignore  README.md  README_CN.md  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
benchmark/: README.md  README_CN.md  __init__.py  cases.json  run_benchmark.py
docs/: ARCHITECTURE.md  ARCHITECTURE_CN.md  BENCHMARKING.md  BENCHMARKING_CN.md  DESIGN_DECISIONS.md  DESIGN_DECISIONS_CN.md  RELEASE_READINESS.md  RELEASE_READINESS_CN.md  TEST_MIGRATION.md  TEST_MIGRATION_CN.md  architecture.md  interview_guide.md  resume_description.md  workflow.md
examples/: final_auto_approve_demo.py  final_docs_update_demo.py  run_benchmark.py  run_v14_benchmark.py
examples/demos/: final_auto_approve_demo.py  final_docs_update_demo.py  final_human_review_demo.py
examples/legacy/: final_auto_approve_demo.py  inal_auto_approve_demo.py  test_final_auto_approve_demo.py  (+8 more)
repopilot_agent/: agent.py  config.py  state.py
reports/: benchmark_report.md
scripts/: verify_local_setup.py
tests/: final_auto_approve_demo.py  final_human_review_demo.py  inal_auto_approve_demo.py  reset_demo_bug_project.py  test_final_agents_import.py  test_final_auto_approve.py  test_final_human_review.py  test_v11_blocked_issue_demo.py  test_v11_guardrails.py  test_v12_agent_middleware.py  test_v13_retrieval.py  test_v15_issue_router.py  test_v16_docs_update.py  test_v18_final_release.py  test_v2_retrieve.py  test_v8_agent_investigate.py
(+96 files in other folders)
